fixed analysis callout card overflow & units issue

--- a/css/components/widgets/text_chart.scss
+++ b/css/components/widgets/text_chart.scss
@@ -43,16 +43,18 @@
     text-align: center;
   }
 
-  .stat-value {
-    margin: 0;
-    color: $primary-green;
+  .c-data {
+    max-width: 210px;
+    .stat-value {
+      margin: 10px;
+      color: $primary-green;
+    }
+    .stat-type {
+    
+    }
+    
+    .stat-name {
+    
+    }
   }
-  .stat-type {
-  
-  }
-  
-  .stat-name {
-  
-  }
-
 }
